# system-pulse

./: .editorconfig  .gitignore  .replit  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURRENT_SPRINT.md  DECISION_LOG.md  LICENSE  README.md  START_HERE.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: pull_request_template.md
app/: .gitkeep
app/desktop/src-tauri/: Cargo.toml  tauri.conf.json
app/desktop/src-tauri/capabilities/: default.json
app/desktop/src-tauri/src/: browser_care.rs  flow_truth.rs  main.rs  mission_engine.rs  models.rs  pulse_core.rs  storage_recovery.rs
app/desktop/src-tauri/src/collectors/: macos.rs  mod.rs
assets/: .gitkeep
design/: .gitkeep
docs/: 00-Founding-Engineering-Handover.md  01-Product-Bible.md  02-Experience-Bible.md  03-North-Star.md  04-Design-System.md  05-Health-Score.md  06-Architecture.md  07-Roadmap.md  08-Brand.md  09-Copywriting.md  10-Marketing.md  11-Architecture-Recommendation.md  18-Founding-Engineer-Readiness.md  19-Source-Document-Reading-Notes.md  20-Milestone-2-First-Usable-App.md  21-Milestone-3-Revision-Real-World-Learning-001.md  22-PulseCore-Layers.md  23-Desktop-Build-And-Download.md  24-Source-Archive-Status.md  25-Polish-Sprint-001.md  26-Source-Document-Ingest-Status.md  27-macOS-UAT-Gatekeeper.md  28-Momentum-Sprint-001.md  29-Refinement-Sprint-001.md  30-Architects-Update-001.md  31-Architects-Update-002.md  32-Product-Reset.md  33-Decision-Architecture.md  34-macOS-Release-Signing-And-Notarization.md  35-Architects-Update-003.md  36-Architects-Update-004.md  37-Feeling-Bible.md  (+5 more)
(+30 files in other folders)
