[package]
name = "system-pulse-desktop"
version = "0.1.0"
description = "System Pulse desktop app"
authors = ["vanessanz78"]
license = "Proprietary"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11.3", features = [] }
